Fixed logo alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,23 @@ h2, h3, p {
   width: 74em;
 }
 
+#logo-box {
+  height: inherit;
+  float: left;
+  margin-right: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#nos-logo {
+  width: 5em;
+  height: 2em;
+  background-image: url("../img/logo/nos-logo.svg");
+  display: inline-block;
+  background-size: 100% 100%;
+}
+
 .header-item {
   display: table;
   position: relative;
@@ -221,21 +238,6 @@ h2, h3, p {
 
 .header-nieuws:hover .header-dropdown {
   display: block;
-}
-
-#nos-logo {
-  margin-top: 15px;
-  background-image: url("../img/logo/nos-logo.svg");
-  display: inline-block;
-  width: 100px;
-  height: 30px;
-  background-size: 100% 100%;
-}
-
-#logo-box {
-  height: inherit;
-  float: left;
-  margin-right: 20px;
 }
 
 #topstories {
